tests/checker/bad/lib/BadADTLib1.scilla
library BadADTLib1

type BadType =
| Item1 of Int32
| Item2

type BadType =
| Item3 of Int32
| Item4
